# video-translator-moonshine

./: .gitignore  README.md  pyproject.toml  要件定義書_動画字幕自動生成ツール.md
subgen/: __init__.py  asr.py  audio_extractor.py  cli.py  config.py  diarization.py  pipeline.py  subtitle_writer.py  translator.py  web.py
subgen/static/: style.css
subgen/templates/: index.html
tests/: test_audio_extractor.py  test_cli.py  test_config.py  test_diarization.py  test_subtitle_writer.py  test_translator.py  test_web.py
